package factory.components;

/**
 * Design Pattern: Abstract Factory (Product)
 * Abstract base class for product dispensing mechanisms.
 */

public interface Dispenser {
    void dispenseProduct(String productId);
}
